--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -1,1 +1,4 @@
 GEMINI_API_KEY=YOUR_GEMINI_API_KEY_HERE
+DEBUG=False
+SECRET_KEY=your-secret-key-here
+ALLOWED_HOSTS=your-domain.com,another-domain.com
